OSGI JXTA bundles are testable